# Eve

./: CMakeLists.txt  CMakeLists.txt.bak  LICENSE  License.txt  PRODUCT_INFO.cmake  ProductInfo.cmake  ProjectFlags.cmake  Readme.txt
eve/: CMakeLists.txt  CMakeLists.txt.bak  eve.rc.in  main.cpp
eve/app/: App.cpp  App.cpp.bak  App.h  App.h.bak  CMakeLists.txt  Includes.h
eve/cmd/: CMakeLists.txt  Command.cpp  Command.h  Stack.cpp  Stack.h
eve/core/: CMakeLists.txt  Flags.h  Includes.h  Includes.h.bak  Macro.h  Object.cpp  Object.h  Renderer.cpp  Renderer.h  SystemDefinition.h
eve/dx11/: CMakeLists.txt
eve/dx11/core/: BlendStates.h  CMakeLists.txt  ConstantBuffer.cpp  ConstantBuffer.h  Context.cpp  Context.h  DepthStencilStates.cpp  DepthStencilStates.h  Device.cpp  Device.h  Enums.h  Formats.cpp  Formats.h  Includes.h  IndexBuffer.cpp  IndexBuffer.h  Macros.h  RasterizerStates.cpp  RasterizerStates.h  RawBuffer.cpp  RawBuffer.h  RenderTarget.cpp  RenderTarget.h  RenderTargetStack.cpp  RenderTargetStack.h  Renderer.cpp  Renderer.h  ResourcePool.h  SamplerStates.cpp  SamplerStates.h  ShaderCompiler.cpp  ShaderCompiler.h  ShaderInstance.cpp  ShaderInstance.h  StructuredBuffer.cpp  StructuredBuffer.h  SwapChain.cpp  SwapChain.h  VertexBuffer.cpp  VertexBuffer.h
eve/evt/: CMakeLists.txt  Callback.h  CallbackAuto.h  Delegate.h  Event.cpp  Event.h  Includes.h  Listener.h  Server.h  TCallback.h  TCallbackAuto.h  TDelegate.h  TDelegateAbstract.h  TEvent.h  TEventAbstract.h  TQueue.h  TStrategy.h  Utils.h
eve/files/: CMakeLists.txt  Includes.h  Utils.cpp  Utils.h
eve/geom/: CMakeLists.txt  Cube.cpp  Cube.h  Includes.h  Plane.cpp  Plane.h  Sphere.cpp  Sphere.h
eve/gl/: External.h  Macro.h  Renderer.cpp  Renderer.h  SystemContext.h  SystemPixelFormat.cpp  SystemPixelFormat.h
eve/gl/win32/: Context.cpp  Context.h  PixelFormat.cpp  PixelFormat.h
eve/io/: CMakeLists.txt  Image.cpp  Image.h  Utils.cpp  Utils.h  Utils.h.bak
eve/io/dae/: Helper.h  Loader.cpp  Parser.cpp
eve/math/: CMakeLists.txt  Camera.cpp  Camera.h  Includes.h  Math.h  MatrixDecompose.cpp  MatrixDecompose.h  Simd.h  TArea.h  TBox.h  TCamera.h  TCamera.h.bak  TLight.h  TMath.cpp  TMath.h  TMatrix.h  TMatrix22.h  TMatrix33.h  TMatrix44.h  TMatrixAffine2.h  TMatrixAlgo.h  TMesh.h  TQuaternion.h  TRay.h  TRect.h  TTransform.h  TVector.h  TVector2.h  TVector3.h  TVector4.h  Types.h
eve/math/core/: CMakeLists.txt  Includes.h  Math.h  MatrixDecompose.cpp  MatrixDecompose.h  Simd.h  TMatrix.h  TMatrix22.h  TMatrix33.h  TMatrix44.h  TQuaternion.h  TRay.h  TRect.h  TVector.h  TVector2.h  TVector3.h  TVector4.h  Types.h
eve/mem/: Allocator.cpp  Allocator.h  CMakeLists.txt  Includes.h  Pointer.cpp  Pointer.h  Scoped.h
eve/memory/: Includes.h  Pointer.cpp  Pointer.h  Scoped.h
eve/mes/: Error.cpp  Error.h  Includes.h  Server.cpp  Server.h
eve/mess/: CMakeLists.txt  Error.cpp  Error.h  Includes.h  Server.cpp  Server.h
eve/messaging/: Error.cpp  Error.h  Includes.h  Server.cpp  Server.h
eve/ocl/: CMakeLists.txt
eve/ocl/core/: CMakeLists.txt  CommandQueue.cpp  CommandQueue.h  Configuration.h  Configuration.h.in  Context.cpp  Context.h  Debug.cpp  Debug.h  Engine.cpp  Engine.h  External.h  Kernel.cpp  Kernel.h  Program.cpp  Program.h
eve/ogl/: CMakeLists.txt  Debug.cpp  Debug.h  External.h  Fbo.cpp  Fbo.h  Format.cpp  Format.h  Object.cpp  Object.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Uniform.cpp  Uniform.h  Vao.cpp  Vao.h
eve/ogl/core/: CMakeLists.txt  CMakeLists.txt.bak  Debug.cpp  Debug.h  External.h  Fbo.cpp  Fbo.h  Macro.h  Object.cpp  Object.h  Pbo.cpp  Pbo.h  Renderer.cpp  Renderer.cpp.bak  Renderer.h  Renderer.h.bak  Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h  Texture.cpp  Texture.h  Uniform.cpp  Uniform.h  Vao.cpp  Vao.h  VaoStaged.cpp  VaoStaged.h
eve/ogl/particule/: Attractor.h  AttractorModel.h  BufferBaseModel.cpp  BufferBaseModel.h  CMakeLists.txt  IAttractorUpdate.h  ParticleManager.cpp  ParticleManager.h  RayCastAttractorUpdate.h
eve/ogl/win32/: Context.cpp  Context.h  PixelFormat.cpp  PixelFormat.h
eve/scene/: CMakeLists.txt  Camera.cpp  Camera.h  Event.cpp  Event.h  EventListener.cpp  EventListener.h  EventSender.cpp  EventSender.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Object.cpp  Object.h  Scene.cpp  Scene.h  Skeleton.cpp  Skeleton.h
eve/str/: CMakeLists.txt  Utils.cpp  Utils.h
eve/sys/: CMakeLists.txt  Includes.h
eve/sys/shared/: CMakeLists.txt  Event.cpp  Event.h  EventSender.cpp  EventSender.h  Mouse.h  Render.cpp  Render.cpp.bak  Render.h  SystemCursor.cpp  SystemCursor.h  SystemEvent.h  SystemMouse.h  SystemRunLoop.cpp  SystemRunLoop.h  SystemRunLoopWorker.cpp  SystemRunLoopWorker.h  SystemView.cpp  SystemView.h  (+6 more)
eve/thr/: Barrier.cpp  Barrier.h  CMakeLists.txt  CMakeLists.txt.bak  Condition.cpp  Condition.h  Fence.cpp  Fence.h  Includes.h  Lock.cpp  Lock.h  Mutex.cpp  Mutex.h  Native_Barrier.cpp  Native_Barrier.h  ScopedFence.h  Semaphore.cpp  Semaphore.h  SpinLock.cpp  SpinLock.h  TPCQueue.h  Thread.cpp  Thread.h  ThreadDummy.cpp  ThreadDummy.h  ThreadPool.cpp  ThreadPool.h  ThreadedWork.cpp  ThreadedWork.h  ThreadedWorkIO.cpp  ThreadedWorkIO.h  Utils.cpp  Utils.h  Worker.cpp  Worker.h
eve/threading/: Barrier.cpp  Barrier.h  Condition.cpp  Condition.h  CriticalSectionLock.h  Fence.cpp  Fence.h  Includes.h  Lock.cpp  Lock.h  Lockable.h  Mutex.cpp  Mutex.h  ScopedFence.h  ScopedMutex.h  SpinLock.cpp  SpinLock.h  TWorker.h  Thread.cpp  Thread.h  ThreadDummy.cpp  ThreadDummy.h  ThreadPool.cpp  ThreadPool.h  ThreadSimple.cpp  ThreadSimple.h  Utils.cpp  Utils.h  Worker.cpp  Worker.h
eve/time/: Absolute.cpp  Absolute.h  CMakeLists.txt  Clock.cpp  Clock.h  Relative.cpp  Relative.h  Timer.cpp  Timer.cpp.bak  Timer.h  Timer.h.bak  Utils.cpp  Utils.h
eve/ui/: CMakeLists.txt  Display.cpp  Display.h  Frame.cpp  Frame.h  Layer.cpp  Layer.h  Output.cpp  Output.h  Renderer.cpp  Renderer.h  View.cpp  View.h  Widget.cpp  Widget.h  Window.cpp  Window.h
eve/version/: Version.h  Version.h.in
eve/xml/: CMakeLists.txt
(+105 files in other folders)
